# pacs-examples

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .nojekyll  Biblio.odt  CONTRIBUTING.md  COPYRIGHT  README.md  README.md.orig  a.txt  aaa.txt  adasd  add_submodule_upstream.sh  b.txt  change_submodules_url.sh  change_submodules_url_https.sh  change_submodules_url_ssh.sh  install-git-submodules.sh  install-modules.sh  load_modules.sh  new2  submodule_commands.txt  update.sh
Examples/src/: .gitignore  CMakeLists.txt  COPYRIGHT  COPYRIGHT.html  OldExamples
Examples/src/AbstractFactory/: Factory.hpp  Proxy.hpp  README  main_testAbstractFactory.cpp
Examples/src/Accumulate/: KahanSummation.hpp  Makefile.inc  README  main_summation.cpp
Examples/src/Aggregates/: CMakeLists.txt  NoteOnAggregate.md  NoteOnAggregateAnd BraceInitialization.md  README.md  main.cpp
Examples/src/Algorithms/: README  README.md
Examples/src/Aliasing/: Makefile.inc  README  main_aliasing.cpp
Examples/src/Array/: Makefile  Makefile_template  README  README.md  main_array.cpp
Examples/src/Arrays/: CMakeLists.txt  Doxyfile  README.md  main_array.cpp
Examples/src/ArraysAndAggregates/: main_array.cpp
Examples/src/Biforc/: Makefile  biforc.cpp  biforc.hpp  geo.cpp  geo.hpp  main_test.REMOVED.git-id  main_test.cpp
Examples/src/Bindings/: CMakeLists.txt  README  README.md  main.cpp
Examples/src/C++20/: README.md
Examples/src/CRTP/: CMakeLists.txt  MyMat0.cpp  MyMat0.hpp  README  README.md  crtp.cpp  crtp.hpp  inequality.hpp  main_crtp  main_crtp.cpp  matrixProxy.hpp  point.hpp
Examples/src/CloningUtilities/: CloningUtilities.hpp  Makefile  README  main.cpp
Examples/src/CompositionWithVariadicTemplates/: Bc.hpp  CMakeLists.txt  Dot.hpp  Extensions.hpp  Id.hpp  Point.hpp  README.md  README.txt  main.cpp
Examples/src/Concepts/: CMakeLists.txt  README.md  main_concepts  main_concepts.cpp  myConcepts.hpp
Examples/src/Constexpr/: CMakeLists.txt  HornerConstexpr.hpp  Makefile  README.md  README.txt  examine.sh  mainConstexprFunction  mainConstexprFunction.cpp  mainConstexprFunction2.cpp  mainHornerConstexpr.cpp  mainNormalFunction.cpp  twoFunctions.cpp  twoFunctions.hpp
Examples/src/DataHeap/: Makefile  README.md  heapView.hpp  heapViewTraits.hpp  main.cpp
Examples/src/Derivatives/: CMakeLists.txt  Derivatives.hpp  LambdaDerivatives.hpp  Makefile  README.md  main_Derivatives.cpp
Examples/src/DesignPatterns/: README  README,md  README.md
Examples/src/DreadedDiamond/: README  dd.hpp  main_dd.cpp
Examples/src/ExpressionTemplates/: CMakeLists.txt  Makefile_old  README  README.md  main_integration.cpp
Examples/src/FPComparison/: Makefile  README.md
Examples/src/FPExceptions/: Makefile  README  README.md  fpeUtilities.cpp  fpeUtilities.hpp  main_fpe.cpp  myexceptions.hpp  rational.cpp  rational.hpp  trapfpe.cpp  trapfpe.hpp
Examples/src/Factory/: Makefile  Polygon.cpp  Polygon.hpp  README.md  builders.hpp  main_poly.cpp
Examples/src/FactoryPlugin/: FactoryTraits.cpp  FactoryTraits.hpp  Makefile  Polygon.cpp  Polygon.hpp  Quadrilateral.cpp  Quadrilateral.hpp  README.md  TriangleAndSquare.cpp  TriangleAndSquare.hpp  builders.hpp  loadPolyFactory.cpp  loadPolyFactory.hpp  main_poly.cpp
Examples/src/FactoryPluginII/: FactoryTraits.hpp  Makefile  Polygon.hpp  Quadrilateral.cpp  Quadrilateral.hpp  README.md  TriangleAndSquare.cpp  TriangleAndSquare.hpp  loadPolyFactory.cpp  loadPolyFactory.hpp  main_poly.cpp
Examples/src/FinDiff/: Makefile  README  README.md  data.pot  gnuplot.txt  main_findiff.cpp  plot_results.sh
Examples/src/FixedPointSolver/: Accelerators.hpp  CMakeLists.txt  FixedPointIteration.hpp  FixedPointSolver.tex  FixedPointTraits.hpp  README.md  VectorInterface.hpp  main_FixedPoint.cpp
Examples/src/FloatingPoint/: README.md
Examples/src/FloatingPointFailures/: Makefile  Makefile.inc
Examples/src/ForwardDeclaration/: A.cpp  A.hpp  B.cpp  B.hpp  CMakeLists.txt  README  README.md  main.cpp
Examples/src/Functors/: CMakeLists.txt  README  README.md  functors.cpp  functors.hpp  main_functors.cpp
Examples/src/GenericFactory/: CMakeLists.txt  Factory.hpp  GenericFactory_explanation.md  Makefile  Proxy.hpp  Proxy_explanatin.md  README.md  main_testAbstractFactory.cpp
Examples/src/HeapView/: CMakeLists.txt  HeapViewTraits.hpp  HeapView_Explanation.md  README.md  heapView.hpp  heapViewTraits.hpp  mainHeap.cpp
Examples/src/HeatExchange/: CMakeLists.txt  Doxyfile  HeatExchange_Code_Explanation.md  Makefile  Makefile.inc  README  README.md  example.pot  heat_exchange.tex  main.cpp  parameters.cpp  parameters.hpp  parameters.json  parameters.pot  plot.gnu  plot.sh  readParameters.cpp  readParameters.hpp  scambio_termico.tex  thomas.hpp
Examples/src/Horner/: .gitignore  CMakeLists.txt  Makefile  Makefile.inc  README  README.md  horner.cpp  horner.hpp  main_timings  main_timings.cpp
Examples/src/InPolygon/: CMakeLists.txt  README.md  inPolygon.hpp  main_inPolygon.cpp
Examples/src/InitializationList/: NoteOnAggregate.md  README.md  main.cpp
Examples/src/IntegerOverflow/: CMakeLists.txt  README.md  mainItOver.cpp
Examples/src/Interp1D/: CMakeLists.txt  README.md  interp1D.hpp  interp1D_util.hpp  main_interp.cpp
Examples/src/LambdaExpr/: CMakeLists.txt  Makefile  README.md  main.cpp
Examples/src/Libraries/: Makefile  README  README.md  main.cpp  umfpack_example.cpp  umfpack_example.hpp
Examples/src/LineSearch/: DescentDirectionBase.hpp  DescentDirectionFactory.cpp  DescentDirectionFactory.hpp  DescentDirections.cpp  DescentDirections.hpp  GradientFiniteDifference.hpp  LineSearch.hpp  LineSearch.tex  LineSearchSolver.cpp  LineSearchSolver.hpp  LineSearch_options.hpp  LineSearch_traits.hpp  Makefile  Optimization_options.hpp  README.md  main_linesearch.cpp
Examples/src/LinearAlgebra/: .gitmodules  README.md  syntheticDivision_ZeroPolynomials.tex
Examples/src/LinearAlgebraUtil/: CMakeLists.txt  Makefile  README.md  RotatingMatrix.hpp  RotatingMatrix_explanation.md  RotatingVector.hpp  RotatingVector_explanation.md  basicOptimization.hpp  basicZeroFun.hpp  (+7 more)
(+3948 files in other folders)
